2003-10-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/convert-ly.py (sub_chords): Bugfix: convert to -[, so
	that articulation_substitute will not move beam start again.
	(articulation_substitute): Bugfix: remove stray space so that new
	old chords ending '>>' does not get broken up.
	(sub_chord): Use TAB for indentation (not spaces).
	
	* elisp/lilypond-font-lock.el (LilyPond-mode-set-syntax-table):
	Bugfix for startup: Use ?^ instead of ?\^.

2003-10-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lyric-combine-music-iterator.cc
	(Lyric_combine_music_iterator): change init order, to prevent GC
	segfaults.

	* lily/context-specced-music-iterator.cc (construct_children): 
	only change  translator if found. This fixes a core dump problem.

2003-09-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/slur.scm (default-slur-extremity-rules): use equal? for
	comparison.

	* mf/feta-bolletjes.mf: make hole in half note little
	smaller for stem attachment.

	* lily/stem.cc (brew_molecule): tweaks for new flag layout.

	* mf/feta-banier.mf: don't draw stem with flag, just small square
	attachment.

	* mf/feta-bolletjes.mf (slash_slope): remove ledger ending 

	* mf/feta-banier.mf: remove upstem/downstem characters.

	* mf/feta-params.mf (stafflines): stems are 1.3 SLT. 

	* ly/params-init.ly (blotdiameter): set blotdiameter to 2/3 of
	stafflinethickness (in the default)

	* lily/stem.cc (brew_molecule): use round_filled_box for stem.

	* lily/lily-guile.cc (parse_symbol_list): strip spaces at the end.

	* Documentation/topdocs/INSTALL.texi (Top): reorder.

	* scripts/convert-ly.py (conv): add up-to-staff conversion rule.

	* lily/include/directional-element-interface.hh:
	junk class, make {get,set}_grob_direction functions.

	* lily/slur.cc (get_attachment): do something sensible when
	attaching to stem without heads (eg. a rest).

	* lily/stem.cc: remove #'up-to-staff ; use #'stem-end-position for
	forcing up to staff.  remove #'support-head property