@@ -1,3 +1,8 @@
+2003-10-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* scripts/etf2ly.py: Patch by Arvid Grotting for minor keys and <<
+	>> in \score.
+
 2003-10-05  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* scripts/convert-ly.py (sub_chords): Bugfix: convert to -[, so
